# basic-rest-api-rust

./: .env  Cargo.toml
migrations/2022-12-30-010118_create_people/: down.sql  up.sql
src/: main.rs  schema.rs
src/people/: handler.rs  mod.rs  repository.rs  router.rs
